# FaceDetectionDemo

./: .gitignore
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/stone/facedetectiondemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/java/com/stone/facedetectiondemo/: DetectionBasedTracker.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/stone/facedetectiondemo/: ExampleUnitTest.java
